// Copyright 2017 Intel Corporation
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";

message Agent {
  string org_id = 1;
  string public_key = 2;
  bool active = 3;
  repeated string roles = 4;
  repeated KeyValueEntry metadata = 5;
}

message AgentList {
  repeated Agent agents = 1;
}

message Organization {
  string org_id = 1;
  string name = 2;
  repeated string locations = 3;
  repeated AlternateID alternate_id = 4;
  repeated KeyValueEntry metadata = 5;
}

message OrganizationList {
  repeated Organization organizations = 1;
}

message Role {
  string org_id = 1;
  string name = 2;
  string description = 3;
  bool active = 4;
  repeated string permissions = 5;
  repeated string allowed_organizations = 6;
  repeated string inherit_from= 7;
}

message RoleList {
  repeated Role roles = 1;
}

message AlternateIDIndexEntry {
  string id_type = 1;
  string id = 2;
  string grid_identity_id = 3;
}

message KeyValueEntry {
  string key = 1;
  string value = 2;
}

message AlternateID {
  string id_type = 1;
  string id = 2;
}
