// Copyright (c) 2019 Target Brands, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";
import "schema_state.proto";

message Product {
  enum ProductType {
      UNSET_TYPE = 0;
      GS1 = 1;
  }

  // product_id for products (gtin)
  string product_id = 1;

  // What type of product is this (GS1)
  ProductType product_namespace = 2;

  // Who owns this product (pike organization id)
  string owner = 3;

  // Addition attributes for custom configurations
  repeated PropertyValue properties = 4;
}

message ProductList {
  repeated Product entries = 1;
}
